Fixing sass/scss font-face mixin arguments - see https://github.com/FortAwesome/Font-Awesome/issues/74

--- a/Resources/public/sass/font-awesome.scss
+++ b/Resources/public/sass/font-awesome.scss
@@ -33,9 +33,7 @@ $font_path: "../font/fontawesome-webfont" !default;
 		"#{$font_path}.otf", opentype,
 		"#{$font_path}.svgz#FontAwesomeRegular", svg,
 		"#{$font_path}.svg#FontAwesomeRegular", svg),
-	'#{$font_path}.eot',
-	normal,
-	normal);
+	'#{$font_path}.eot');
 
 /* sprites.less reset */
 [class^="icon-"],
